fix cross-browser(gap) and add more responsive to small screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,17 +54,19 @@ body {
 }
 .range-container {
   display: flex;
-  gap: 5em;
   margin-bottom: 2.5em;
 }
+.range-container__size,
+.range-container__speed {
+  margin: 0 2.5em;
+}
 .visualizer {
-  width: 720px;
+  width: auto;
   height: 350px;
   /* border: 1px solid black; */
   display: flex;
   align-items: flex-end;
   justify-content: center;
-  /* gap: 10px; */
   margin-bottom: 2em;
 }
 .array-element {
@@ -74,19 +76,18 @@ body {
 }
 .visualizer__actions {
   display: flex;
-  gap: 20px;
   margin-bottom: 0.75em;
 }
 .btn-action {
   background: #e4e5e6;
   padding: 0.5em;
   border: none;
-  margin-bottom: 2em;
   border-radius: 5px;
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 2.5em 2em;
 }
 .btn-action:focus,
 .btn-action:hover {
@@ -168,9 +169,7 @@ svg {
   }
   .btn-algo {
     font-size: 1rem;
-    width: 110px;
     height: 60px;
-    margin: 0 1em;
     width: 100%;
   }
   .info__title h1 {
@@ -187,6 +186,8 @@ svg {
   .range-container {
     flex-flow: wrap;
     justify-content: center;
-    gap: 1.5em;
+  }
+  .btn-action {
+    margin: 0 0.75em;
   }
 }
